--- a/sass/above/building.scss
+++ b/sass/above/building.scss
@@ -3,7 +3,7 @@ section#building {
 
     position:relative;
     @media($dt) {
-      padding:74rem 0;
+      padding:40rem 0;
       background: $b-blue;
     }
   }
@@ -25,7 +25,7 @@ section#building {
         left:50%;
         top:50%;
       //  transform: translate(-50%,-50%);
-        max-width: 385rem;
+        max-width: 100%;
         h1 {
 
 
@@ -57,7 +57,7 @@ section#building {
 
         li {
 
-          margin-bottom:24rem;
+          margin-bottom:1em;
           padding-left:15rem;
 
           &:last-child {
