--- a/sass/expanded.scss
+++ b/sass/expanded.scss
@@ -16,7 +16,7 @@ $imgDir: '../assets/imgs';
 @import 'map-key.scss';
 @import 'generalFader.scss';
 @import 'build-galfx.scss';
-
+@import 'vtours.scss';
 #css-checker {
   height: 1px;
 }
