--- a/sass/locations.scss
+++ b/sass/locations.scss
@@ -1,4 +1,16 @@
 section#location {
+  .map {
+    .nav-link {
+      position: absolute;
+      left: 65rem;
+      top: -55rem;
+      height: 40rem;
+      background: $b-orange;
+      line-height: 44rem;
+      padding: 0 10rem;
+      color:white;
+    }
+  }
   #location-gallery {
     li {
       opacity: 0;
@@ -33,7 +45,7 @@ section#location {
               color:$b-orange;
               font-family:$din;
               text-transform:uppercase;
-              font-size:48rem;
+              font-size:30rem;
               line-height:1em;
               opacity: 0;
               transition: opacity $ts;
