--- a/sass/above/hero.scss
+++ b/sass/above/hero.scss
@@ -10,8 +10,16 @@
     width: 100%;
     height: 100%;
     background: rgba(black,.33);
+    transition: opacity $ts;
+    pointer-events: none;
     @media($dt) {
       background:none;
+    }
+    &.__over {
+      opacity: 0;
+      @media($dt) {
+        opacity: 1;
+      }
     }
     h1 {
       //text-align: center;
@@ -19,21 +27,29 @@
       left: 0%;
       top:0%;
       width: 100%;
-      text-shadow: 5rem 5rem 2rem rgba(black,.3);
+
     //  transform: translate(-50%,-50%);
       color:white;
       font-size: 40rem;
       line-height: (80em/92);
       padding: 42rem 0 0 42rem;
-
+      opacity: 0;
+      transition: opacity $ts;
+      &.__activated {
+        opacity: 1;
+      }
       @media($dt) {
         font-size: 92rem;
         color:$b-orange;
+        text-shadow: 5rem 5rem 2rem rgba(black,.3);
+        strong:after {
+          box-shadow: 5rem 5rem 2rem rgba(black,.3);
+        }
         br {
           display: block;
         }
       }
-      opacity: 0;
+
     }
   }
 }
