--- a/sass/map-key.scss
+++ b/sass/map-key.scss
@@ -93,7 +93,7 @@
       }
     }
     .item {
-      font-size: 14px;
+      font-size: 14rem;
       color: $b-blue;
       margin-bottom: 12rem;
       img {
@@ -145,7 +145,7 @@
       columns: auto;
       > span {
         display:block;
-        margin: 0 0 10px 0;
+        margin: 0 0 10rem 0;
         font-size: 18rem;
         padding: 5rem 0 0 26rem;
         height: 23rem;
@@ -189,7 +189,7 @@
         }
       }
       .t-list {
-        letter-spacing:-4px;
+        letter-spacing:-4rem;
         > * {
           display:inline-block;
           vertical-align:top;
