--- a/sass/above/scaffold.scss
+++ b/sass/above/scaffold.scss
@@ -228,7 +228,7 @@ blockquote {
   //box-shadow: 0 0 5px rgba(black,.2);
   @media($dt) {
     max-width: 1600px;
-    //max-width:none;
+    max-width:none;
   }
   > * {
 
