--- a/sass/avail.scss
+++ b/sass/avail.scss
@@ -101,13 +101,13 @@ section#availabilities {
         }
       }
       &.fl-1 {
-        >span.num {
+        span.num {
           display:block;
           width: auto;
           text-align:left;
           white-space:nowrap;
         }
-        >span.rsf {
+        span.rsf {
           margin-left: 18%;
         }
       }
