--- a/sass/above/header.scss
+++ b/sass/above/header.scss
@@ -79,24 +79,25 @@ header {
   @media($dt) {
     position:fixed;
     width: 100%;
-    max-width:1600px;
+    //max-width:1600px;
     z-index:999;
     background:white;
     height:128rem;
     left: auto;
     top: 0;
-
-    @media(min-width:1600px) {
-      padding-right: 0 !important;
-    }
-    html.__site-loaded & {
-      transition:height $ts/2;
-    }
     html.__below-header & {
       height: 80rem;
     }
+
+    html.__site-loaded & {
+      transition:height $ts/2;
+    }
+
     @media(max-height:1000px) {
       height: 80rem;
+    }
+    @media(min-width:1600px) {
+    //  padding-right: 0 !important;
     }
 
     h1 {
