--- a/sass/vtours.scss
+++ b/sass/vtours.scss
@@ -47,9 +47,15 @@
         font-size: 30rem;
 
       }
+      .asterisk-copy {
+        color:$b-blue;
+        font-family:$din;
+        font-size:12rem;
+      }
       .links {
         letter-spacing: -4rem;
         margin-top: 5rem;
+        margin-bottom: 0;
         > li {
           display:inline-block;
           vertical-align: top;
