--- a/sass/future.scss
+++ b/sass/future.scss
@@ -52,7 +52,7 @@
           }
           h4 {
             font-size:30rem;
-            line-height:normal;
+            line-height:1em;
             text-transform:none;
             @media($dt) {
               font-size:16rem;
